fixing exdir in unzip function

--- a/manuscript/sources/installed-r-packages.bib
+++ b/manuscript/sources/installed-r-packages.bib
@@ -1,25 +1,25 @@
 @Manual{devtools,
   title = {devtools: Tools to Make Developing R Packages Easier},
   author = {Hadley Wickham and Jim Hester and Winston Chang},
-  year = {2019},
-  note = {R package version 2.2.1},
+  year = {2020},
+  note = {R package version 2.2.2},
   url = {https://CRAN.R-project.org/package=devtools},
 }
 
 @Manual{bibtex,
   title = {bibtex: Bibtex Parser},
   author = {Romain Francois},
-  year = {2017},
-  note = {R package version 0.4.2},
+  year = {2020},
+  note = {R package version 0.4.2.2},
   url = {https://CRAN.R-project.org/package=bibtex},
 }
 
 @Manual{knitr1,
   title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
   author = {Yihui Xie},
-  year = {2019},
-  note = {R package version 1.25},
-  url = {https://yihui.name/knitr/},
+  year = {2020},
+  note = {R package version 1.28},
+  url = {https://yihui.org/knitr/},
 }
 
 @Book{knitr2,
@@ -30,7 +30,7 @@
   year = {2015},
   edition = {2nd},
   note = {ISBN 978-1498716963},
-  url = {https://yihui.name/knitr/},
+  url = {https://yihui.org/knitr/},
 }
 
 @InCollection{knitr3,
@@ -48,7 +48,7 @@
   title = {rmarkdown: Dynamic Documents for R},
   author = {JJ Allaire and Yihui Xie and Jonathan McPherson and Javier Luraschi and Kevin Ushey and Aron Atkins and Hadley Wickham and Joe Cheng and Winston Chang and Richard Iannone},
   year = {2019},
-  note = {R package version 1.16},
+  note = {R package version 1.18},
   url = {https://github.com/rstudio/rmarkdown},
 }
 
@@ -80,7 +80,7 @@
 }
 
 @Manual{git2r,
-  author = {Stefan Widgren and others},
+  author = {Stefan Widgren and {others}},
   title = {{git2r}: Provides Access to Git Repositories},
   year = {2018},
   note = {R package version 0.21.0},
@@ -88,11 +88,11 @@
 }
 
 @Manual{googlesheets4,
-  title = {googlesheets4: Manage Google Spreadsheets from R using the Sheets API v4},
+  title = {googlesheets4: Access Google Sheets using the Sheets API V4},
   author = {Jennifer Bryan},
   year = {2019},
-  note = {R package version 0.0.0.9001},
-  url = {https://github.com/tidyverse/googlesheets4},
+  note = {R package version 0.1.0},
+  url = {https://CRAN.R-project.org/package=googlesheets4},
 }
 
 @Manual{biogeo,
@@ -119,7 +119,7 @@
   title = {curl: A Modern and Flexible Web Client for R},
   author = {Jeroen Ooms},
   year = {2019},
-  note = {R package version 4.2},
+  note = {R package version 4.3},
   url = {https://CRAN.R-project.org/package=curl},
 }
 
@@ -133,9 +133,9 @@
 
 @Manual{dplyr,
   title = {dplyr: A Grammar of Data Manipulation},
-  author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller},
-  year = {2019},
-  note = {R package version 0.8.3},
+  author = {Hadley Wickham and Romain FranÃ§ois and Lionel Henry and Kirill MÃ¼ller},
+  year = {2020},
+  note = {R package version 0.8.4},
   url = {https://CRAN.R-project.org/package=dplyr},
 }
 
@@ -159,7 +159,7 @@
   title = {future: Unified Parallel and Distributed Processing in R for Everyone},
   author = {Henrik Bengtsson},
   year = {2019},
-  note = {R package version 1.15.0},
+  note = {R package version 1.15.1},
   url = {https://CRAN.R-project.org/package=future},
 }
 
@@ -173,7 +173,7 @@
 
 @Manual{here,
   title = {here: A Simpler Way to Find Your Files},
-  author = {Kirill Müller},
+  author = {Kirill MÃ¼ller},
   year = {2017},
   note = {R package version 0.1},
   url = {https://CRAN.R-project.org/package=here},
@@ -206,8 +206,8 @@
 @Manual{rgbif1,
   title = {rgbif: Interface to the Global Biodiversity Information Facility API},
   author = {Scott Chamberlain and Vijay Barve and Dan Mcglinn and Damiano Oldoni and Peter Desmet and Laurens Geffert and Karthik Ram},
-  year = {2019},
-  note = {R package version 1.4.0},
+  year = {2020},
+  note = {R package version 2.1.0},
   url = {https://CRAN.R-project.org/package=rgbif},
 }
 
@@ -231,8 +231,8 @@
 @Manual{tidyr,
   title = {tidyr: Tidy Messy Data},
   author = {Hadley Wickham and Lionel Henry},
-  year = {2019},
-  note = {R package version 1.0.0},
+  year = {2020},
+  note = {R package version 1.0.2},
   url = {https://CRAN.R-project.org/package=tidyr},
 }
 
@@ -241,7 +241,7 @@
   author = {{R Core Team}},
   organization = {R Foundation for Statistical Computing},
   address = {Vienna, Austria},
-  year = {2019},
+  year = {2018},
   url = {https://www.R-project.org/},
 }
 
@@ -249,15 +249,15 @@
   title = {purrr: Functional Programming Tools},
   author = {Lionel Henry and Hadley Wickham},
   year = {2019},
-  note = {R package version 0.3.2},
+  note = {R package version 0.3.3},
   url = {https://CRAN.R-project.org/package=purrr},
 }
 
 @Manual{raster,
   title = {raster: Geographic Data Analysis and Modeling},
   author = {Robert J. Hijmans},
-  year = {2019},
-  note = {R package version 3.0-7},
+  year = {2020},
+  note = {R package version 3.0-12},
   url = {https://CRAN.R-project.org/package=raster},
 }
 
@@ -265,7 +265,7 @@
   title = {rgdal: Bindings for the 'Geospatial' Data Abstraction Library},
   author = {Roger Bivand and Tim Keitt and Barry Rowlingson},
   year = {2019},
-  note = {R package version 1.4-7},
+  note = {R package version 1.4-8},
   url = {https://CRAN.R-project.org/package=rgdal},
 }
 
@@ -286,7 +286,7 @@
   title = {Applied spatial data analysis with {R}, Second edition},
   year = {2013},
   publisher = {Springer, NY},
-  url = {http://www.asdar-book.org/},
+  url = {https://asdar-book.org/},
 }
 
 @Manual{sqldf,
@@ -307,17 +307,17 @@
 
 @Manual{taxize2,
   title = {taxize: Taxonomic information from around the web},
-  author = {Scott Chamberlain and Eduard Szoecs and Zachary Foster and Zebulun Arendsee and Carl Boettiger and Karthik Ram and Ignasi Bartomeus and John Baumgartner and James O'Donnell and Jari Oksanen and Bastian Greshake Tzovaras and Philippe Marchand and Vinh Tran and Maëlle Salmon and Gaopeng Li and Matthias Grenié},
-  year = {2019},
-  note = {R package version 0.9.9},
+  author = {Scott Chamberlain and Eduard Szoecs and Zachary Foster and Zebulun Arendsee and Carl Boettiger and Karthik Ram and Ignasi Bartomeus and John Baumgartner and James O'Donnell and Jari Oksanen and Bastian Greshake Tzovaras and Philippe Marchand and Vinh Tran and MaÃ«lle Salmon and Gaopeng Li and Matthias GreniÃ©},
+  year = {2020},
+  note = {R package version 0.9.92},
   url = {https://github.com/ropensci/taxize},
 }
 
 @Manual{tm1,
   title = {tm: Text Mining Package},
   author = {Ingo Feinerer and Kurt Hornik},
-  year = {2018},
-  note = {R package version 0.7-6},
+  year = {2019},
+  note = {R package version 0.7-7},
   url = {https://CRAN.R-project.org/package=tm},
 }
 
@@ -341,10 +341,18 @@
   url = {https://CRAN.R-project.org/package=tidylog},
 }
 
+@Manual{vegan,
+  title = {vegan: Community Ecology Package},
+  author = {Jari Oksanen and F. Guillaume Blanchet and Michael Friendly and Roeland Kindt and Pierre Legendre and Dan McGlinn and Peter R. Minchin and R. B. O'Hara and Gavin L. Simpson and Peter Solymos and M. Henry H. Stevens and Eduard Szoecs and Helene Wagner},
+  year = {2019},
+  note = {R package version 2.5-6},
+  url = {https://CRAN.R-project.org/package=vegan},
+}
+
 @Manual{vroom,
   title = {vroom: Read and Write Rectangular Text Data Quickly},
   author = {Jim Hester and Hadley Wickham},
-  year = {2019},
-  note = {R package version 1.0.2},
+  year = {2020},
+  note = {R package version 1.2.0},
   url = {https://CRAN.R-project.org/package=vroom},
 }
