--- a/manuscript/sources/installed-r-packages.bib
+++ b/manuscript/sources/installed-r-packages.bib
@@ -47,8 +47,8 @@
 @Manual{rmarkdown1,
   title = {rmarkdown: Dynamic Documents for R},
   author = {JJ Allaire and Yihui Xie and Jonathan McPherson and Javier Luraschi and Kevin Ushey and Aron Atkins and Hadley Wickham and Joe Cheng and Winston Chang and Richard Iannone},
-  year = {2019},
-  note = {R package version 1.18},
+  year = {2020},
+  note = {R package version 2.3},
   url = {https://github.com/rstudio/rmarkdown},
 }
 
@@ -90,9 +90,9 @@
 @Manual{googlesheets4,
   title = {googlesheets4: Access Google Sheets using the Sheets API V4},
   author = {Jennifer Bryan},
-  year = {2019},
-  note = {R package version 0.1.0},
-  url = {https://CRAN.R-project.org/package=googlesheets4},
+  year = {2021},
+  note = {https://googlesheets4.tidyverse.org,
+https://github.com/tidyverse/googlesheets4},
 }
 
 @Manual{biogeo,
@@ -150,8 +150,8 @@
 @Manual{fs,
   title = {fs: Cross-Platform File System Operations Based on 'libuv'},
   author = {Jim Hester and Hadley Wickham},
-  year = {2019},
-  note = {R package version 1.3.1},
+  year = {2020},
+  note = {R package version 1.5.0},
   url = {https://CRAN.R-project.org/package=fs},
 }
 
@@ -206,7 +206,7 @@
 @Manual{rgbif1,
   title = {rgbif: Interface to the Global Biodiversity Information Facility API},
   author = {Scott Chamberlain and Vijay Barve and Dan Mcglinn and Damiano Oldoni and Peter Desmet and Laurens Geffert and Karthik Ram},
-  year = {2020},
+  year = {2021},
   note = {R package version 2.1.0},
   url = {https://CRAN.R-project.org/package=rgbif},
 }
@@ -248,8 +248,8 @@
 @Manual{purrr,
   title = {purrr: Functional Programming Tools},
   author = {Lionel Henry and Hadley Wickham},
-  year = {2019},
-  note = {R package version 0.3.3},
+  year = {2020},
+  note = {R package version 0.3.4},
   url = {https://CRAN.R-project.org/package=purrr},
 }
 
@@ -355,4 +355,21 @@
   year = {2020},
   note = {R package version 1.2.0},
   url = {https://CRAN.R-project.org/package=vroom},
+}
+
+@Manual{rgbif1,
+  title = {rgbif: Interface to the Global Biodiversity Information Facility API},
+  author = {Scott Chamberlain and Vijay Barve and Dan Mcglinn and Damiano Oldoni and Peter Desmet and Laurens Geffert and Karthik Ram},
+  year = {2021},
+  note = {R package version 2.1.0},
+  url = {https://CRAN.R-project.org/package=rgbif},
+}
+
+@Article{rgbif2,
+  title = {R Python, and Ruby clients for GBIF species occurrence data},
+  author = {Scott Chamberlain and Carl Boettiger},
+  journal = {PeerJ PrePrints},
+  year = {2017},
+  publisher = {PeerJ, Inc.},
+  url = {https://doi.org/10.7287/peerj.preprints.3304v1},
 }
