--- a/manuscript/sources/installed-r-packages.bib
+++ b/manuscript/sources/installed-r-packages.bib
@@ -1,8 +1,8 @@
 @Manual{devtools,
   title = {devtools: Tools to Make Developing R Packages Easier},
   author = {Hadley Wickham and Jim Hester and Winston Chang},
-  year = {2020},
-  note = {R package version 2.2.2},
+  year = {2021},
+  note = {R package version 2.4.0},
   url = {https://CRAN.R-project.org/package=devtools},
 }
 
@@ -17,8 +17,8 @@
 @Manual{knitr1,
   title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
   author = {Yihui Xie},
-  year = {2020},
-  note = {R package version 1.28},
+  year = {2021},
+  note = {R package version 1.33},
   url = {https://yihui.org/knitr/},
 }
 
@@ -47,8 +47,8 @@
 @Manual{rmarkdown1,
   title = {rmarkdown: Dynamic Documents for R},
   author = {JJ Allaire and Yihui Xie and Jonathan McPherson and Javier Luraschi and Kevin Ushey and Aron Atkins and Hadley Wickham and Joe Cheng and Winston Chang and Richard Iannone},
-  year = {2020},
-  note = {R package version 2.3},
+  year = {2021},
+  note = {R package version 2.7},
   url = {https://github.com/rstudio/rmarkdown},
 }
 
@@ -60,6 +60,16 @@
   year = {2018},
   note = {ISBN 9781138359338},
   url = {https://bookdown.org/yihui/rmarkdown},
+}
+
+@Book{rmarkdown3,
+  title = {R Markdown Cookbook},
+  author = {Yihui Xie and Christophe Dervieux and Emily Riederer},
+  publisher = {Chapman and Hall/CRC},
+  address = {Boca Raton, Florida},
+  year = {2020},
+  note = {ISBN 9780367563837},
+  url = {https://bookdown.org/yihui/rmarkdown-cookbook},
 }
 
 @Manual{pacman,
@@ -230,9 +240,9 @@ https://github.com/tidyverse/googlesheets4},
 
 @Manual{tidyr,
   title = {tidyr: Tidy Messy Data},
-  author = {Hadley Wickham and Lionel Henry},
-  year = {2020},
-  note = {R package version 1.0.2},
+  author = {Hadley Wickham},
+  year = {2021},
+  note = {R package version 1.1.3},
   url = {https://CRAN.R-project.org/package=tidyr},
 }
 
